2023-01-06  Duncan Murdoch     <murdoch.duncan@gmail.com>

	* R/arrays.R:  Switch rgl::rgl.* to rgl::*3d functions
	* demo/OptionSurfaces.R: Idem

2022-10-25  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.4.17
	* configure.ac: Idem
	* configure: Idem

	* src/Makevars.in (CXX_STD): Switch to C++14
	* src/Makevars.win (CXX_STD): Idem

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3

2022-05-05  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.4.16
	* configure.ac: Idem
	* configure: Idem

2022-05-04  Dirk Eddelbuettel  <edd@debian.org>

	* R/affine.R: Use inherits instead of class
	* R/bermudan.R: Idem
	* R/sabr.R: Idem

2022-05-03  Dirk Eddelbuettel  <edd@debian.org>

	* docker/ci/Dockerfile: Small update
	* docker/run/Dockerfile: Idem

2022-05-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor release

	* man/SabrSwaption.Rd: Move evaluation date of example by a day

	* .github/workflows/docker.yaml: Only run on (coarse) schedule

2022-03-15  Kai Lin  <klin441@gmail.com>

	* src/utils.cpp (getDayCounter):  change deprecated Actual365NoLeap()
	to Actual365Fixed(Actual365Fixed::NoLeap)
	* man/Enum.Rd: associated documentation change
	* man/BondUtilities.Rd: remove mentions of daycounter deprecation,
	remove mentions of compiler directives RQUANTLIB_USE_ACTUAL365NOLEAP
	and RQUANTLIB_USE_ACTUALACTUAL

2021-11-30  Kai Lin  <klin441@gmail.com>

	* man/Enum.Rd: Update and extend documentation for DayCounter

2022-01-19  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.4.15
	* configure.ac: Idem
	* configure: Idem

	* R/zzz.R: In interactice mode, display versions of RQuantLib at
	startup

2022-01-18  Dirk Eddelbuettel  <edd@debian.org>

	* src/bonds.cpp: Updated for Quantlib 1.25

2021-12-28  Dirk Eddelbuettel  <edd@debian.org>
